added happy birthday song

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
       <button class="j drum">j</button>
       <button class="k drum">k</button>
       <button class="l drum">l</button>
+      <span >click h to play happy birthday song</span>
+      <button class="l drum">h</button>
+      
     </div>
     <footer>Made with ❤️ at Masai.</footer>
   </body>
