--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <head>
     <meta charset="utf-8" />
     <title>Drum Kit</title>
+    <link rel="icon" type="image/svg+xml" href="./images/drum.jpeg" />
+
     <link rel="stylesheet" href="styles.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Arvo"
